# booplik

01 Reference/: 01 Reference.vcproj  1.h  main.cpp
01 Time/: Time.h
02 CopyConstructor/: 02 CopyConstructor.vcproj  1.h  main.cpp
02_Vector/: 02_Vector.sln  02_Vector.vcproj  02_Vector.vcxproj  02_Vector.vcxproj.filters  IndexedVarVector.h  IndexedVector.h  UpgradeLog.XML  UpgradeLog.htm  Vector.cpp  Vector.h  main.cpp
03 Array/: 03 Array.vcproj  Array.cpp  Array.h  main.cpp
03 Triangle/: 03 Triangle.vcproj  Segment.h  Triangle.cpp  Triangle.h  Triangle.txt  main.cpp
ArrayQueue/: ArrayQueue.h  CMakeLists.txt  Screen.cpp  Screen.h  main.cpp
COmplexCalc/: CC.H  CMakeLists.txt  Complex.cpp  Wrapper.h  main.cpp
CopyConstructor/: CMakeLists.txt  main.cpp
ListSynyak/: CMakeLists.txt  List.h  MaxPQ.h  OperatorGenerators.h  main.cpp
OOP_01_MARHAL/: CMakeLists.txt  main.cpp  point.cpp
OOP_01_MARHAL_/: CMakeLists.txt  main.cpp  point.cpp  point.h  test.cpp  test.h
OOP_02_MARHAL/: CMakeLists.txt  point.cpp  point.h  segment.cpp  segment.h  test.cpp  test.h
OOP_04_Marhal/: CMakeLists.txt  Point.cpp  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  main.cpp
OOP_05_Marhal/: CMakeLists.txt  (+3 more)
OOP_FINALS_Marhal/: CMakeLists.txt  main.cpp
OOP_FINALS_Marhal/Calendar_Alarm/: Alarm.cpp  Alarm.h  Calendar.cpp  Calendar.h  Date.cpp  Date.h
OOP_FINALS_Marhal/Stacks/: Array.h  Pair.h  PriorityStack.h  QuickPeekPriorityStack.h  QuickPushPriorityStack.h  Sequence.h
OOP_FINALS_Marhal/Triangle/: Point.cpp  Point.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h
(+117 files in other folders)
